# localbox

./: .gitignore  BRD.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: committing.md
.github/workflows/: ci.yml  prepare-release.yml  release-create.yml  release-prepare.yml  release.yml  tag-release.yml
docs/: README.md  api-reference.md  concepts.md  developer-guide.md  getting-started.md  roadmap.md
docs/cookbook/: custom-build-env.md  debugging-builds.md  multi-module-maven.md  node-frontend.md  private-registry.md  spring-boot.md
example/: .gitignore  README.md  solution-override.py.example  solution.py
example/assets/: Dockerfile
openspec/changes/prepare-v0-2-release-line/: design.md  tasks.md
openspec/changes/restructure-cli-domain-first/: tasks.md
openspec/specs/cli-structure/: spec.md
openspec/specs/compose-env-resolution/: spec.md
openspec/specs/compose-generation/: spec.md
openspec/specs/config-loading/: spec.md
openspec/specs/force-fetch/: spec.md
openspec/specs/force-switch/: spec.md
openspec/specs/gradle-builder-tasks/: spec.md
openspec/specs/manifest-flow/: spec.md
openspec/specs/override-clear/: spec.md
openspec/specs/override-list/: spec.md
openspec/specs/override-set/: spec.md
openspec/specs/parallel-builds/: spec.md
openspec/specs/quiet-build/: spec.md
scripts/: create-release-pr.sh  next-release  release.sh
src/localbox/: __init__.py  __main__.py  cli.py  config.py  log.py
src/localbox/builders/: __init__.py  build.py  compose.py  docker.py  image_builder.py
tests/: __init__.py  test_base_env.py  test_cli.py  test_compose_golden.py  test_config.py  test_force_and_parallel.py  test_manifest.py  test_models.py  test_quiet_build.py  test_resolver.py
tests/fixtures/: docker-compose.golden.yml
(+67 files in other folders)
